2016-07-12  Trevor Saunders  <tbsaunde+gcc@tbsaunde.org>

	* tree.c (struct free_lang_data_d): Add constructor and change
	types of members to ones that automatically manage resources.
	(fld_worklist_push): Adjust.
	(find_decls_types): Likewise.
	(find_decls_types_in_eh_region): Likewise.
	(free_lang_data_in_cgraph): Stop manually creating and
	destroying members of free_lang_data_d.

2016-07-13  Uros Bizjak  <ubizjak@gmail.com>

	PR rtl-optimization/68961
	* config/i386/sse.md (movsd/movhpd to movupd peephole2s): Add new
	peephole variant.  Use sse_reg_operand predicates.

2016-07-12  Uros Bizjak  <ubizjak@gmail.com>

	* config/i386/predicates.md (x86_64_immediate_operand)
	<case CONST_INT>: Remove unneeded truncation to DImode.
	<case CONST>: Ditto.
	(x86_64_zext_immediate_operand) <case CONST>: Ditto.

2016-07-12  Michael Meissner  <meissner@linux.vnet.ibm.com>

	PR target/71805
	* config/rs6000/altivec.md (altivec_vperm_<mode>_internal):
	The xxperm and xxpermr instructions require that the 2nd input
	operand overlap with the output operand, and not the 1st.
	(altivec_vperm_v8hiv16qi): Likewise.
	(altivec_vperm_<mode>_uns_internal): Likewise.
	(altivec_vpermr_<mode>_internal): Likewise.
	(vperm_v8hiv4si): Likewise.
	(vperm_v16qiv8hi): Likewise.

2016-07-12  Martin Liska  <mliska@suse.cz>

	* params.def: Add avg-loop niter.
	* tree-ssa-loop-ivopts.c (avg_loop_niter): Use the param.
	* cfgloopanal.c (expected_loop_iterations_unbounded): Likewise.
	* doc/invoke.texi: Document the new parameter.

2016-07-12  Kyrylo Tkachov  <kyrylo.tkachov@arm.com>

	PR middle-end/71700
	* expr.c (store_constructor): Mask sign-extended bits when widening
	sub-word constructor element at the start of a word.

2016-07-12  Martin Liska  <mliska@suse.cz>

	* Makefile.in: Append rule for params-options.h.
	* params-options.h: New file.

2016-07-12  Martin Liska  <mliska@suse.cz>

	* ira-build.c (mark_loops_for_removal): Properly iterate
	loops.
